# Touching-Butts-Game-Engine

./: .gitignore  CMakeLists.txt  Doxyfile  readMe.md
cmake/: FindLUA.cmake  FindLUABridge.cmake  FindSRE.cmake
data/DebuggingScripts/: mousePositionScript.lua
data/GameDemoScripts/: brickScript.lua  cameraControllerScript.lua  coinScript.lua  fallDownKillerScript.lua  gameManagerScript.lua  inGameUIScript.lua  marioScript.lua  mushroomScript.lua  plantScript.lua  tubeScript.lua
data/Images/: Background.json  Coin.json  MarioPacked.json  UI.json
data/PhysicsTechDemoScripts/: BottomScript.lua  main.lua  scene.json
data/ScriptingTechDemoScripts/: main.lua  scene.json
docs/: _animation2_d_component_8h_source.html  _box2_d_collider_component_8h_source.html  _camera_8h_source.html  _circle_collider_component_8h_source.html  _collider_component_8h_source.html  _debug_draw_8h_source.html  _engine_system_8h_source.html  _game_component_8h_source.html  _game_object_8h_source.html  _gui_element_component_8h_source.html  _i_event_listener_8h_source.html  _lua_animation2_d_component_handler_8h_source.html  _lua_event_system_handler_8h_source.html  _lua_rigid_body_component_handler_8h_source.html  _lua_scene_system_handler_8h_source.html  _lua_scriptable_component_handler_8h_source.html  _lua_sprite_component_handler_8h_source.html  _lua_text_component_handler_8h_source.html  _lua_touching_butts_handler_8h_source.html  _lua_transform_component_handler_8h_source.html  _particle_8h_source.html  _particle_system_8h_source.html  _scene_8h_source.html  _scene_system_8h_source.html  _scriptable_component_8h_source.html  _scripting_system_8h_source.html  _sprite_component_8h_source.html  _sprite_system_8h_source.html  _text_component_8h_source.html  _touching_butts_8hpp_source.html  _transform_component_8h_source.html  _vector2_8h_source.html  annotated.html  annotated_dup.js  class_animation2_d_component-members.html  class_animation2_d_component.html  class_animation2_d_component__coll__graph.map  class_animation2_d_component__coll__graph.md5  class_animation2_d_component__inherit__graph.map  class_base_event_data-members.html  (+229 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_8.js  all_b.js  all_d.js  all_e.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_9.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_9.js  functions_a.js  functions_b.js  functions_e.js  variables_0.js  variables_2.js  variables_4.js  variables_7.js  variables_8.js  variables_9.js
documentation/: _base_event_data_8h_source.html  _button_component_8h_source.html  _debug_system_8h_source.html  _drawing_system_8h_source.html  _event_system_8h_source.html  _input_event_data_8h_source.html  _input_system_8h_source.html  _interpolation_8hpp_source.html  _lua_box2_d_collider_component_handler_8h_source.html  _lua_button_component_handler_8h_source.html  _lua_circle_collider_component_handler_8h_source.html  _lua_debug_system_handler_8h_source.html  _lua_game_object_handler_8h_source.html  _lua_input_system_handler_8h_source.html  _lua_scene_handler_8h_source.html  _mesh_component_8h_source.html  _physics_system_8h_source.html  _rigid_body_component_8h_source.html  _scene_parser_8h_source.html  _sprite_8h_source.html  _touching_butts_game_8h_source.html  _vector3_8h_source.html  class_animation2_d_component.js  class_animation2_d_component__inherit__graph.md5  class_base_event_data.html  class_base_event_data__inherit__graph.map  class_box2_d_collider_component-members.html  class_box2_d_collider_component__coll__graph.map  class_box2_d_collider_component__coll__graph.md5  class_button_component__coll__graph.md5  class_circle_collider_component-members.html  class_circle_collider_component.html  class_circle_collider_component.js  class_circle_collider_component__coll__graph.md5  class_collider_component-members.html  class_collider_component__coll__graph.map  class_collider_component__inherit__graph.md5  class_debug_draw.html  class_debug_draw.js  class_debug_draw__coll__graph.md5  (+162 more)
documentation/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  classes_7.js  classes_8.js  classes_a.js  functions_11.js  functions_15.js  functions_8.js  functions_c.js  (+8 more)
src/: BaseEventData.cpp  BaseEventData.h  DebugDraw.cpp  DebugDraw.h  DebugSystem.cpp  DebugSystem.h  DrawingSystem.cpp  DrawingSystem.h  EngineSystem.cpp  EngineSystem.h  EventSystem.cpp  EventSystem.h  GameObject.cpp  GameObject.h  IEventListener.h  InputEventData.cpp  InputEventData.h  InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  Scene.cpp  Scene.h  SceneParser.cpp  SceneParser.h  SceneSystem.cpp  SceneSystem.h  ScriptingSystem.cpp  ScriptingSystem.h  Sprite.cpp  Sprite.h  SpriteSystem.cpp  SpriteSystem.h  TouchingButts.cpp  TouchingButts.hpp  TouchingButtsGame.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  (+1 more)
(+98 files in other folders)
